--- a/src/main/resources/assets/skyfarm_client/lang/en_us.json
+++ b/src/main/resources/assets/skyfarm_client/lang/en_us.json
@@ -1,11 +1,14 @@
 {
-  "config.skyfarm.skybox": " Garden of Glass skybox",
+  "config.skyfarm.skybox": " Garden of Glass Skybox",
   "config.skyfarm.skybox.true": "Enabled",
   "config.skyfarm.skybox.false": "Disabled",
-  "config.skyfarm.horizon": " Sky horizon",
+  "config.skyfarm.horizon": " Horizon",
   "config.skyfarm.horizon.true": "Disabled",
   "config.skyfarm.horizon.false": "Enabled",
   "config.skyfarm.fog": " Fog",
   "config.skyfarm.fog.true": "Disabled",
-  "config.skyfarm.fog.false": "Enabled"
+  "config.skyfarm.fog.false": "Enabled",
+  "config.skyfarm.clear_skies": " Clear Skies",
+  "config.skyfarm.clear_skies.true": "Enabled",
+  "config.skyfarm.clear_skies.false": "Disabled"
 }
